SFDC Automation/src/objects/IndustryType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Industry IDs to Ryder IDs</description>
    <fields>
        <fullName>IndustryID__c</fullName>
        <label>IndustryID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndustryType__c</fullName>
        <label>IndustryType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RyderId__c</fullName>
        <description>RyderId Value</description>
        <externalId>true</externalId>
        <label>RyderId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IndustryTypeMapping</label>
</CustomObject>